--- a/index.html
+++ b/index.html
@@ -3,9 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сайт про котів</title>
+    <title>Все про котів</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Привіт, це мій сайт про котів!</h1>
+    <header>
+        <h1>🐾 Коти – улюбленці мільйонів людей</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Головна</a></li>
+                <li><a href="summary.html">Висновок</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section>
+        <h2>Про котів</h2>
+        <p>Коти – одні з найпопулярніших домашніх тварин у світі. Вони загадкові, незалежні, ласкаві та водночас грайливі.</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Jungle_Cat_Felis_chaus_by_Dr._Raju_Kasambe_DSCN7957_%283%29.jpg/330px-Jungle_Cat_Felis_chaus_by_Dr._Raju_Kasambe_DSCN7957_%283%29.jpg" alt="Дикий кіт">
+    </section>
+
+    <section>
+        <h2>Як правильно доглядати за котом?</h2>
+        <h3>1. Харчування</h3>
+        <p>Здорове харчування – ключ до довгого життя кота. Основу раціону повинні складати якісний корм або натуральна їжа.</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Black_Footed_Cat.jpg/330px-Black_Footed_Cat.jpg" alt="Чорнолапий кіт">
+
+        <h3>2. Догляд за шерстю</h3>
+        <p>Коти самостійно доглядають за шерстю, але їм потрібна допомога – регулярне розчісування.</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e9/Persian_sand_CAT.jpg/330px-Persian_sand_CAT.jpg" alt="Персидський пісчаний кіт">
+    </section>
+
+    <section>
+        <h3>3. Лоток та гігієна</h3>
+        <p>Коти дуже охайні тварини, і чистий лоток – це запорука їхнього комфорту.</p>
+
+        <h3>4. Здоров’я та вакцинація</h3>
+        <p>Щоб уникнути серйозних проблем, котів потрібно вчасно вакцинувати та обробляти від паразитів.</p>
+    </section>
+
+    <section>
+        <h2>🐱 Цікаві факти про котів</h2>
+        <ul>
+            <li>Коти сплять у середньому 13–16 годин на добу.</li>
+            <li>Вони можуть чути ультразвукові хвилі.</li>
+            <li>Муркотіння котів заспокоює не лише їх, а й людей.</li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Все про котів | <a href="summary.html">Перейти до висновку</a></p>
+    </footer>
 </body>
 </html>
